Fix some bug